--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
     <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
     <init-param>
       <param-name>jersey.config.server.provider.packages</param-name>
-      <param-value>biz.tugay.pg.jaxrs.resource</param-value>
+      <param-value>biz.tugay.pg.jaxrs</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
