Replaced moxy with jackson

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
     </dependency>
     <dependency>
       <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-json-jackson</artifactId>
+      <version>2.29.1</version>
+    </dependency>
+    <!-- Either use jersey-media-json-jackson or jersey-media-moxy, not both.
+    <dependency>
+      <groupId>org.glassfish.jersey.media</groupId>
       <artifactId>jersey-media-moxy</artifactId>
       <version>2.29.1</version>
       <exclusions>
@@ -52,6 +58,7 @@
         </exclusion>
       </exclusions>
     </dependency>
+    -->
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
