--- a/package.json
+++ b/package.json
@@ -1,166 +1,5 @@
 {
-  "name": "insight-brain-frontend",
-  "version": "1.149.0-SNAPSHOT",
-  "scripts": {
-    "start": "webpack-dev-server --env brainOnly",
-    "start-mtiq": "webpack-dev-server --env brainOnly --allowed-hosts all",
-    "start-all": "webpack-dev-server",
-    "start-version-graph": "webpack-dev-server --env versionGraphOnly",
-    "start-gallery": "webpack-dev-server --config webpack.config.gallery.js",
-    "build": "webpack --mode=production --env production",
-    "test": "npm-run-all jest test-compile karma",
-    "test-compile": "npm-run-all test-lint test-webpack",
-    "test-lint": "eslint --ext .jsx,.js src/test/frontend",
-    "test-webpack": "webpack --config webpack.config.brain-test.js",
-    "karma": "karma start",
-    "test-watch": "npm-run-all test-lint test-watch-initial-compile test-webpack-karma-watch",
-    "test-watch-initial-compile": "webpack --config webpack.config.brain-test.js --env skipTestCoverage",
-    "test-webpack-karma-watch": "npm-run-all -p test-webpack-watch test-karma-watch",
-    "test-webpack-watch": "webpack watch --config webpack.config.brain-test.js --env skipTestCoverage",
-    "test-karma-watch": "karma start karma.conf.interactive.js",
-    "jest": "jest",
-    "jest-watch": "jest --watch",
-    "clean": "rimraf target/generated-resources/webpack/assets",
-    "format": "prettier -w"
-  },
   "dependencies": {
-    "@fortawesome/pro-regular-svg-icons": "^5.11.2",
-    "@fortawesome/pro-solid-svg-icons": "^5.11.2",
-    "@fortawesome/free-brands-svg-icons": "^5.11.2",
-    "@react-hook/debounce": "^4.0.0",
-    "@react-hook/resize-observer": "^1.2.6",
-    "@reduxjs/toolkit": "^1.5.1",
-    "@sonatype/react-commonmark": "^3.0.1",
-    "@sonatype/react-shared-components": "12.16.7",
-    "@sonatype/version-graph": "^1.0.2",
-    "@uirouter/angularjs": "^1.0.5",
-    "angular": "~1.6.10",
-    "angular-aria": "~1.6.10",
-    "angular-cookies": "~1.6.10",
-    "angular-route": "~1.6.10",
-    "angular-sanitize": "~1.6.10",
-    "angular-ui-bootstrap": "^0.13.4",
-    "angular-ui-validate": "^1.2.3",
-    "angular-vs-repeat": "^1.1.7",
-    "angular-xeditable": "^0.2.0",
-    "axios": "^0.21.2",
-    "bootstrap-datepicker": "^1.7.1",
-    "bootstrap-sass": "^2.3.2",
-    "bootstrap-toggle": "^2.2.0",
-    "bootstrap2-umd": "^2.3.2",
-    "buffer": "^6.0.3",
-    "classnames": "^2.2.6",
-    "classybrew": "^0.0.3",
-    "components-font-awesome": "^4.3.0",
-    "core-js": "^3.13.1",
-    "d3": "^4.8.0",
-    "dateformat": "^2.0.0",
-    "debounce": "^1.2.0",
-    "es6-collections": "^0.5.6",
-    "es6-promise": "^4.2.8",
-    "eslint-plugin-prettier": "^3.3.1",
-    "fuse.js": "^6.4.0",
-    "is-valid-hostname": "^1.0.0",
-    "jquery": "^3.5.0",
-    "jquery.browser": "^0.1.0",
-    "moment": "^2.29.4",
-    "moment-timezone": "^0.5.34",
-    "ng-redux": "^4.4.3",
-    "plottable": "^3.7.0",
-    "prop-types": "^15.7.2",
-    "query-string": "^5.1.1",
-    "ramda": "^0.27.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.0.3",
-    "react2angular": "^4.0.6",
-    "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
-    "sjcl": "^1.0.7",
-    "swagger-ui-react": "^4.16.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.4",
-    "@babel/preset-react": "^7.14.5",
-    "@faker-js/faker": "^7.6.0",
-    "@testing-library/jasmine-dom": "^1.3.3",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^12.1.1",
-    "angular-highlightjs": "^0.7.1",
-    "angular-marked": "^1.2.2",
-    "angular-mocks": "~1.6.10",
-    "axios-mock-adapter": "^1.20.0",
-    "babel-jest": "^29.6.1",
-    "babel-loader": "^8.2.2",
-    "copy-modules-webpack-plugin": "^2.2.1",
-    "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^6.2.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-deprecate": "^0.7.0",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-webpack-plugin": "^3.0.1",
-    "exports-loader": "^3.0.0",
-    "highlight.js": "^9.12.0",
-    "html-loader": "^2.1.2",
-    "husky": "=4",
-    "inject-loader": "^4.0.1",
-    "istanbul-instrumenter-loader": "^3.0.1",
-    "jasmine-core": "^3.9.0",
-    "jasmine-enzyme": "^7.1.2",
-    "jest": "^29.6.1",
-    "jest-environment-jsdom": "^29.6.1",
-    "jest-enzyme": "^7.1.2",
-    "jest-junit": "^16.0.0",
-    "karma": "^6.3.4",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-cli": "^2.0.0",
-    "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "^4.0.1",
-    "karma-junit-reporter": "^2.0.1",
-    "karma-spec-reporter": "^0.0.32",
-    "karma-summary-reporter": "^2.0.2",
-    "lint-staged": ">=10",
-    "mini-css-extract-plugin": "^2.2.2",
-    "npm-run-all": "^4.1.5",
-    "null-loader": "^4.0.1",
-    "prettier": "^2.2.1",
-    "redux-mock-store": "^1.5.3",
-    "resolve-url-loader": "^4.0.0",
-    "sass": "^1.43.4",
-    "sass-loader": "^12.1.0",
-    "source-map-loader": "^3.0.0",
-    "stylelint": "^13.13.1",
-    "stylelint-webpack-plugin": "^3.0.1",
-    "webpack": "^5.51.2",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.1.0",
-    "xmldom": "^0.1.27"
-  },
-  "resolutions": {
-    "lodash": "^4.17.21",
-    "immer": "^9.0.6",
-    "moment": "^2.29.4",
-    "autolinker": "3.16.1",
-    "core-js-pure": "3.28.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/sonatype/insight-brain"
-  },
-  "author": "Sonatype",
-  "license": "Commercial",
-  "private": true,
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,jsx,css,scss,md}": "prettier --write"
+    "jquery": "^3.7.1"
   }
 }
